# parallelnumericalintegration

./: CMakeLists.txt  README.md  amd_taylor_future_hpx.csv  amd_taylor_future_hpx_median.csv  amd_taylor_par_hpx_median.csv  arm-hpx.sbatch  benchmark.sh  benchmark2.sh  hifiveu-hpx.sbatch  hifiveu_taylor_coroutine_hpx_median.csv  intel-hpx.sbatch  intel-phx.sh  ookami_taylor_coroutine_hpx_median.csv  ookami_taylor_par_hpx.csv  ookami_taylor_par_hpx_median.csv  ookami_taylor_sender_receiver_hpx.csv  pine64-hpx.sbatch  plot-data.py  rv64g-hpx.sbatch  rv64g_taylor_future_hpx_median.csv  rv64g_taylor_future_median.csv  rv64g_taylor_sender_receiver_hpx_median.csv  star64-hpx.sbatch  star64_taylor_coroutine_hpx_median.csv  star64_taylor_sender_receiver_hpx_median.csv  test_taylor_future.csv
.circleci/: config.yml
data/: intel_set_sender_receiver_median.csv
data/RISCV23/: hifiveu_taylor_par_hpx_median.csv  star64_taylor_future_hpx_median.csv  star64_taylor_future_median.csv  star64_taylor_par_hpx_median.csv
data/WAMTA23/: amd_taylor_coroutine_hpx_median.csv  amd_taylor_future.csv  amd_taylor_future_median.csv  amd_taylor_par_hpx.csv  deepbayou_taylor_future.csv  deepbayou_taylor_future_coroutine_hpx.csv  deepbayou_taylor_future_hpx.csv  deepbayou_taylor_par_hpx.csv  deepbayou_taylor_sender_receiver_hpx.csv  intel_set_future_coroutine_median.csv  intel_set_future_median.csv  intel_set_par_median.csv  intel_taylor_future.csv  intel_taylor_future_hpx.csv  intel_taylor_par_hpx.csv  ookami_taylor_coroutine_hpx.csv  ookami_taylor_future.csv  ookami_taylor_future_hpx.csv  ookami_taylor_future_hpx_median.csv  ookami_taylor_future_median.csv
src/: CMakeLists.txt  set_future_coroutine_hpx.cpp  set_future_hpx.cpp  set_par_hpx.cpp  set_sender_receiver_hpx.cpp  taylor_future.cpp  taylor_future_coroutine_hpx.cpp  taylor_future_hpx.cpp  taylor_par_hpx.cpp  taylor_par_openmp.cpp  taylor_sender_receiver_hpx.cpp
src/util/: kernel.hpp  pbm.hpp
